--- a/Attendance-API/pom.xml
+++ b/Attendance-API/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>mapstruct-jdk8</artifactId>
 			<version>${org.mapstruct.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.1.3.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
