--- a/Attendance-API/pom.xml
+++ b/Attendance-API/pom.xml
@@ -5,11 +5,10 @@
 
 	<groupId>com.cuemby.attendance</groupId>
 	<artifactId>Attendance-API</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>Attendance-API</name>
-	<description>Employee attendance API</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -67,6 +66,18 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<addResources>true</addResources>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+					<check />
 				</configuration>
 			</plugin>
 			<plugin>
@@ -200,4 +211,11 @@
 	</pluginRepositories>
 
 
+	<description>TECHNICAL TEST JAVA.
+A company wants to build a system where it can take control of the assistance of its employees, for it must do certain functionalities demarcated below:
+
+Build functionality for employee records
+Build functionality to terminate a retired employee
+Form for assistance
+Report of attendance in a period of one week and one month.</description>
 </project>
