Refactor to new structure Proyect

--- a/Attendance-API/pom.xml
+++ b/Attendance-API/pom.xml
@@ -100,7 +100,7 @@
 							</outputDirectory>
 							<resources>
 								<resource>
-									<directory>${basedir}/../Attendance-fronted/dist</directory>
+									<directory>${basedir}/Attendance-fronted/dist</directory>
 								</resource>
 							</resources>
 						</configuration>
